# bvi

./: CHANGES  CREDITS  Makefile.in  README  acconfig.h  bm_dos.c  bm_unix.c  bmore.1  bmore.c  bmore.h  bmore.man  bvi.1  bvi.c  bvi.h  bvi.man  comm.c  config.h.in  configure  configure.in  dosconf.h  doscur.h  dosio.c  edit.c  io.c  mkinstalldirs  re.c  recomp.c  set.c  set.h  tags
html/: bmore.html  bmore_cmd.html  bmore_opt.html  colon.html  cursor.html  download.html  edit.html  german.html  index.html  install.html  man_bmore.html  man_bvi.html  new120.html  new130.html  new131.html  overview.html  qt_bit.html  qt_edit.html  qt_edit.tmp.html  qt_find.html  qt_partial.html  qt_search.html  qt_set.html  qt_yank.html  quick.html  set.html  sitemap.html  yank.html
